# CalmControl

./: .env.example  .gitignore  Cargo.toml  railway.toml
src/: db.rs  main.rs  state.rs  store.rs
src/handlers/: auth.rs  dashboard.rs  mod.rs  newsletter.rs  profile.rs  sessions.rs  videos.rs
src/models/: mod.rs  newsletter.rs  session.rs  user.rs  video.rs
src/templates/: mod.rs
